# ANDE-Reproduction

./: .gitignore  README.md  pyproject.toml
configs/: ande_4096_14cls.yaml  ande_784_14cls.yaml  ande_8100_14cls.yaml  ande_8100_14cls_no_se.yaml  ande_8100_2cls.yaml
data/: manifest_raw.parquet  manifest_stats.parquet
docs/: experiment_process.md  extended_experiments.md  reproduction_notes.md  reproduction_report.md  session_experiment_process.md
docs/results/: _extended_phaseB_last.csv  extended_phaseA.csv  extended_phaseA_full.csv  extended_phaseA_segment_raw.csv  extended_phaseB.csv  extended_phaseB.summary.json  matrix_summary.json  results_long.csv  table_behavior14.md  table_binary2.md
docs/results/round_history/: all_rounds_results_long.csv  all_rounds_results_long_raw.csv  all_rounds_results_summary.csv  three_rounds_behavior14.md  three_rounds_binary2.md  three_rounds_complete_accuracy.md
scripts/: build_tables.py  download_data.py  extract_darknet_zip.py  generate_classroom_diagrams.py  generate_classroom_doc.py  generate_report_figures.py  run_all.sh  run_extended_matrix.py  run_extended_phaseB.py
src/ande/: attacks.py  evaluate.py  metrics.py  train.py
src/ande/baselines/: cnn1d.py  flowpic.py  hierarchical.py  ml.py  plain_resnet.py  train_dl.py
src/ande/data/: dataset.py  labels.py  preprocess_raw.py  preprocess_stats.py
src/ande/models/: __init__.py  ande.py  (+3 more)
tests/: test_attacks.py  test_baselines.py  test_config.py  test_dataset_split.py  test_labels.py  test_metrics.py  test_models.py  test_preprocess_raw.py  test_se_block.py
(+2 files in other folders)
